--- a/ABOUT.html
+++ b/ABOUT.html
@@ -19,7 +19,7 @@
     <div id="menu" class="flexbox spacebetween fixed" top="0">
       <div class="flexbox quarter-size flex-start">
         <h1>
-          <a href="MEV.html"
+          <a href="index.html"
             >Marie Velasco //
             <span style="position: relative;"
               >MEV<img
@@ -42,7 +42,7 @@
         <div id="reseaux" class="flexbox column">
           <li>
             <a
-              href="https://www.instagram.com/marie_velasco/?hl=fr"
+              href="https://www.instagram.com/studio_mev/?hl=fr"
               target="_blank"
               >instagram</a
             >
@@ -137,26 +137,14 @@
 
                 <br /><br />
                 Vous avez un projet ? Demander un devis
-                <a href="mailto:mev.dsign@gmail.com">ici</a>.
+                <a href="mailto:mev.dsign@gmail.com"><u>ici</u></a
+                >.
               </p>
-
-              <img
-                id="souligner"
-                src="CSS/img/GIF/souligne.gif"
-                class="flexbox"
-              />
             </div>
           </article>
         </section>
       </div>
     </div>
-
-    <footer>
-      <h3>
-        MEV © 2020 //
-        <a href="MENTIONS LÉGALES.html" target="_blank">MENTIONS LÉGALES</a>
-      </h3>
-    </footer>
 
     <script type="text/javascript" src="menu.js"></script>
   </body>
