--- a/CONTACT.html
+++ b/CONTACT.html
@@ -17,7 +17,7 @@
   <body>
     <div id="menu" class="flexbox spacebetween fixed" top="0">
       <div class="flexbox quarter-size flex-start">
-        <h1><a href="MEV.html">Marie Velasco // MEV </a></h1>
+        <h1><a href="index.html">Marie Velasco // MEV </a></h1>
       </div>
 
       <ul id="navigation" class="flexbox">
@@ -30,7 +30,7 @@
         <div id="reseaux" class="flexbox column">
           <li>
             <a
-              href="https://www.instagram.com/marie_velasco/?hl=fr"
+              href="https://www.instagram.com/studio_mev/?hl=fr"
               target="_blank"
               >instagram</a
             >
