--- a/MENTIONS LÉGALES.html
+++ b/MENTIONS LÉGALES.html
@@ -15,20 +15,20 @@
   </head>
 
   <body>
-    <h1>mentions légales</h1>
-
     <section>
       <article>
         <p id="mentions">
-          1 // PRÉSENTATION DU SITE
+          <b>MENTIONS LÉGALES </b>
 
-          <br /><br />
+          <br/></br> 1 // PRÉSENTATION DU SITE
+
+          <br /><br/>
           En vertu de l’article 6 de la loi n° 2004-575 du 21 juin 2004 pour la
           confiance dans l’économie numérique, il est précisé aux utilisateurs
           du site www.X l’identité des différents intervenants dans le cadre de
           sa réalisation et de son suivi :
 
-          <br /><br />PROPRIÉTAIRE : Marie Velasco // MEV
+          <br /><br/>PROPRIÉTAIRE : Marie Velasco // MEV
 
           <br />06 10 49 78 50
 
@@ -184,9 +184,7 @@
 
           <br /><br />Loi n° 78-87 du 6 janvier 1978, notamment modifiée par la
           loi n° 2004-801 du 6 août 2004 relative à l’informatique, aux fichiers
-          et aux libertés.
-
-          <br />Loi n° 2004-575 du 21 juin 2004 pour la confiance dans
+          et aux libertés. Loi n° 2004-575 du 21 juin 2004 pour la confiance dans
           l’économie numérique.
 
           <br /><br /><br />
@@ -203,9 +201,5 @@
         </p>
       </article>
     </section>
-
-    <div id="bouton">
-      <a href="MEV.html"><img src="CSS/img/FLECHE.gif" style="width:9%" /> </a>
-    </div>
   </body>
 </html>
