--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="menu" class="flexbox spacebetween fixed" top="0">
       <div class="flexbox quarter-size flex-start">
-        <h1><a href="MEV.html">Marie Velasco // MEV </a></h1>
+        <h1><a href="index.html">Marie Velasco // MEV </a></h1>
       </div>
 
       <ul id="navigation" class="flexbox">
@@ -28,7 +28,7 @@
         <div id="reseaux" class="flexbox column">
           <li>
             <a
-              href="https://www.instagram.com/marie_velasco/?hl=fr"
+              href="https://www.instagram.com/studio_mev/?hl=fr"
               target="_blank"
               >instagram</a
             >
@@ -44,15 +44,10 @@
       </div>
     </div>
 
-    <img
-      src="CSS/img/GIF/hello.gif"
-      style="padding-left: 20%"
-      width="5%"
-      class="flexbox"
-    />
+    <img id="hello" src="CSS/img/GIF/" class="flexbox" width="100%" />
 
     <section>
-      <div class="flexbox centered full-size">
+      <div class="flexbox centered">
         <div class="contouring" id="mev-box">
           <div id="barre" class="flexbox">
             <h2>DESIGNER_GRAPHIQUE</h2>
