--- a/ABOUT.html
+++ b/ABOUT.html
@@ -59,16 +59,8 @@
 
       <div
         class="flexbox responsive"
-        style="position: relative; display: none;"
+        style="position: relative;"
       >
-        <!-- <button id="menuButton" onclick="toggleMenu()">
-          <div class="hamburger hamburger--elastic is-active">
-            <div class="hamburger-box">
-              <div class="hamburger-inner"></div>
-            </div>
-          </div>
-          Menu
-        </button> -->
 
         <button
           id="menuButton"
@@ -82,8 +74,6 @@
         </button>
 
         <div id="responsiveMenu" class="flexbox column closed">
-          <span onclick="toggleMenu()">close menu</span>
-
           <a href="ABOUT.html" class="active">about</a>
           <a href="WORK.html">work</a>
           <a href="CONTACT.html">contact</a>
