--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <footer>
       <h3>
         MEV © 2020 //
-        <a href="MENTIONS LÉGALES.html" target="_blank">MENTIONS LÉGALES</a>
+        <a href="mentions_legales.html" target="_blank">MENTIONS LÉGALES</a>
       </h3>
     </footer>
   </body>
