--- a/about.html
+++ b/about.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>MARIE VELASCO // MEV</title>
-
+    <title>ABOUT</title>
     <link href="CSS/CSS.css" rel="stylesheet" type="text/css" />
+    <link href="CSS/hamburgers.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap"
       rel="stylesheet"
     />
-    <link href="CSS/hamburgers.css" rel="stylesheet" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
@@ -21,13 +20,19 @@
       <div class="flexbox quarter-size flex-start">
         <h1>
           <a href="index.html">
-            <span style="position: relative;">MEV</span>
+            <span style="position: relative;"
+              >MEV<img
+                id="mev"
+                src="CSS/img/GIF/mev.gif"
+                class="flexbox"
+                width="7%"
+            /></span>
           </a>
         </h1>
       </div>
 
       <ul id="navigation" class="flexbox responsive-hidden">
-        <li><a href="about.html">about</a></li>
+        <li><a href="about.html" class="active">about</a></li>
         <li><a href="work.html">work</a></li>
         <li><a href="contact.html">contact</a></li>
       </ul>
@@ -65,8 +70,8 @@
 
         <div id="responsiveMenu" class="flexbox column closed">
           <br /><br />
-          <a href="index.html" class="active">home</a>
-          <a href="about.html">about</a>
+          <a href="index.html">home</a>
+          <a href="about.html" class="active">about</a>
           <a href="work.html">work</a>
           <a href="contact.html">contact</a>
           <br />
@@ -86,36 +91,55 @@
     <div id="main" onclick="closeMenu()">
       <div class="page-container">
         <section>
-          <div class="flexbox centered">
-            <div class="contouring" id="mev-box">
-              <div id="barre" class="flexbox">
-                <h2>DESIGNER_GRAPHIQUE</h2>
-                <img
-                  src="CSS/img/GIF/windows.gif"
-                  width="15%"
-                  style="padding-right: 5%"
-                />
+          <article>
+            <div id="positionnement">
+              <div class="contouring" id="about-box">
+                <div id="codebarre">
+                  <img id="marie" src="CSS/img/GIF/marie.gif" />
+                  <img src="CSS/img/LOGO.gif" />
+                </div>
               </div>
-
-              <img
-                id="hello"
-                src="CSS/img/GIF/hello.gif"
-                class="flexbox"
-                width="100px"
-              />
-
-              <hr id="trait" width="100%" color="white" size="3" />
-              <div id="codebarre"><img src="CSS/img/LOGO.gif" /></div>
             </div>
-          </div>
-        </section>
+          </article>
 
-        <footer id="footer">
-          <h3>
-            MEV © 2020 //
-            <a href="mentions_legales.html" target="_blank">MENTIONS LÉGALES</a>
-          </h3>
-        </footer>
+          <article>
+            <div id="paragraphe">
+              <p>
+                Je suis Marie Velasco, graphiste freelance basée à Montpellier.
+                <br /><br />
+                Passionnée par l'art, la typographie et la photographie j'aime
+                me plonger dans des univers singuliers.
+                <br /><br />
+                Je puise mon inspiration dans tout ce qui m'entoure. J'aime
+                expérimenter, créer, apprendre de nouvelles techniques pour être
+                le plus polyvalente dans mes créations.
+                <br /><br />
+                <a href="../../03_CV/MARIE_VELASCO/MARIE_VELASCO.pdf"
+                  >CV_MARIE_VELASCO</a
+                >
+              </p>
+
+              <img id="click" src="CSS/img/GIF/click.gif" class="flexbox" />
+            </div>
+          </article>
+
+          <article>
+            <div id="paragraphe">
+              <p>
+                Mes services s'étendent de la conception graphique (identités
+                visuelles, logotypes, identité de marque...) aux supports
+                imprimés (les cartes de visite, brochures, affiches, flyers...)
+                et aux supports digitaux (webdesign, community management,
+                bannières...) en passant par la photographie et l'illustration.
+
+                <br /><br />
+                Vous avez un projet ? Demander un devis
+                <a href="mailto:mev.dsign@gmail.com"><u>ici</u></a
+                >.
+              </p>
+            </div>
+          </article>
+        </section>
       </div>
     </div>
 
