--- a/about.html
+++ b/about.html
@@ -20,13 +20,7 @@
       <div class="flexbox quarter-size flex-start">
         <h1>
           <a href="index.html">
-            <span style="position: relative;"
-              >MEV<img
-                id="mev"
-                src="CSS/img/GIF/mev.gif"
-                class="flexbox"
-                width="7%"
-            /></span>
+            <span style="position: relative;">MEV</span>
           </a>
         </h1>
       </div>
