--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -32,31 +32,31 @@
 
           <br />06 10 49 78 50
 
-          <br />mev.dsign@gmail.com
+          <br />hello@marievelasco.com
 
           <br />6 Lot La Pégoulade, 84310 Morières-Les-Avignon
 
           <br />Création graphique et intégration du site : Marie Velasco // MEV
 
-          <br />www.X
+          <br />www.marievelasco.com
 
           <br />Responsable publication : Marie Velasco // MEV
 
-          <br />Hébergeur : X
+          <br />Hébergeur : GitHub
 
           <br /><br /><br />
           2 // CONDITIONS GÉNÉRALES D'UTILISATION DU SITE ET DES SERVICES
           PROPOSÉS
 
-          <br /><br />L’utilisation du site www.X implique l’acceptation pleine
+          <br /><br />L’utilisation du site www.marievelasco.com implique l’acceptation pleine
           et entière des conditions générales d’utilisation ci-après décrites.
           Ces conditions d’utilisation sont susceptibles d’être modifiées ou
-          complétées à tout moment, les utilisateurs du site www.X sont donc
+          complétées à tout moment, les utilisateurs du site www.marievelasco.com sont donc
           invités à les consulter de manière régulière.
 
           <br />Ce site est normalement accessible à tout moment aux
           utilisateurs. Une interruption pour raison de maintenance technique
-          peut être toutefois décidée par www.X qui s’efforcera alors de
+          peut être toutefois décidée par www.marievelasco.com qui s’efforcera alors de
           communiquer préalablement aux utilisateurs les dates et heures de
           l’intervention.
 
@@ -64,20 +64,20 @@
           3 // DESCRIPTION DES SERVICES FOURNIS
 
           <br /><br />
-          Le site www.X a pour objet de fournir une information concernant
+          Le site www.marievelasco.com a pour objet de fournir une information concernant
           l’ensemble des activités liées au métier de Marie Velasco // MEV,
           designer graphique print et web.
 
           <br />
-          Marie Velasco s’efforce de fournir sur le site www.X des informations
+          Marie Velasco s’efforce de fournir sur le site www.marievelasco.com des informations
           aussi précises que possible. Toutefois, elle ne pourra être tenue
           responsable des omissions, des inexactitudes et des carences dans la
           mise à jour, qu’elles soient de son fait ou du fait des tiers
           partenaires qui lui fournissent ces informations.
 
-          <br />Tous les informations indiquées sur le site www.X sont données à
+          <br />Tous les informations indiquées sur le site www.marievelasco.com sont données à
           titre indicatif, et sont susceptibles d’évoluer. Par ailleurs, les
-          renseignements figurant sur le site www.X ne sont pas exhaustifs. Ils
+          renseignements figurant sur le site www.marievelasco.com ne sont pas exhaustifs. Ils
           sont donnés sous réserve de modifications ayant été apportées depuis
           leur mise en ligne.
 
@@ -128,17 +128,17 @@
           6 août 2004, l’article L. 226-13 du Code pénal et la Directive
           Européenne du 24 octobre 1995.
 
-          <br />A l’occasion de l’utilisation du site www.X, peuvent êtres
+          <br />A l’occasion de l’utilisation du site www.marievelasco.com, peuvent êtres
           recueillies : l’URL des liens par l’intermédiaire desquels
-          l’utilisateur a accédé au site www.X, le fournisseur d’accès de
+          l’utilisateur a accédé au site www.marievelasco.com, le fournisseur d’accès de
           l’utilisateur, l’adresse de protocole Internet (IP) de l’utilisateur.
 
           <br />En tout état de cause Marie Velasco // MEV ne collecte des
           informations personnelles relatives à l’utilisateur que pour le besoin
-          de certains services proposés par le site www.X. L’utilisateur fournit
+          de certains services proposés par le site www.marievelasco.com. L’utilisateur fournit
           ces informations en toute connaissance de cause, notamment lorsqu’il
           procède par lui-même à leur saisie. Il est alors précisé à
-          l’utilisateur du site www.X l’obligation ou non de fournir ces
+          l’utilisateur du site www.marievelasco.com l’obligation ou non de fournir ces
           informations.
 
           <br />Conformément aux dispositions des articles 38 et suivants de la
@@ -149,20 +149,20 @@
           titre d’identité avec signature du titulaire de la pièce, en précisant
           l’adresse à laquelle la réponse doit être envoyée.
 
-          <br />Aucune information personnelle de l’utilisateur du site www.X
+          <br />Aucune information personnelle de l’utilisateur du site www.marievelasco.com
           n’est publiée à l’insu de l’utilisateur, échangée, transférée, cédée
           ou vendue sur un support quelconque à des tiers.
 
           <br /><br /><br />
           8 // LIENS HYPERTEXTES ET COOKIES
 
-          <br /><br />Le site www.X contient un certain nombre de liens
+          <br /><br />Le site www.marievelasco.com contient un certain nombre de liens
           hypertextes vers d’autres sites, mis en place avec l’autorisation de
           Marie Velasco // MEV. Cependant, Marie Velasco // MEV n’a pas la
           possibilité de vérifier le contenu des sites ainsi visités, et
           n’assumera en conséquence aucune responsabilité de ce fait.
 
-          <br />La navigation sur le site www.X est susceptible de provoquer
+          <br />La navigation sur le site www.marievelasco.com est susceptible de provoquer
           l’installation de cookie(s) sur l’ordinateur de l’utilisateur. Un
           cookie est un fichier de petite taille, qui ne permet pas
           l’identification de l’utilisateur, mais qui enregistre des
