--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>ABOUT</title>
+    <title>about</title>
     <link href="CSS/CSS.css" rel="stylesheet" type="text/css" />
     <link href="CSS/hamburgers.css" rel="stylesheet" />
     <link
@@ -90,7 +90,7 @@
               <div class="contouring" id="about-box">
                 <div id="codebarre">
                   <img id="marie" src="CSS/img/GIF/marie.gif" />
-                  <img src="CSS/img/LOGO.gif" />
+                  <img id="logoo" src="CSS/img/logo.png" />
                 </div>
               </div>
             </div>
@@ -108,9 +108,7 @@
                 expérimenter, créer, apprendre de nouvelles techniques pour être
                 le plus polyvalente dans mes créations.
                 <br /><br />
-                <a href="../../03_CV/MARIE_VELASCO/MARIE_VELASCO.pdf"
-                  >CV_MARIE_VELASCO</a
-                >
+                <a href="CSS/img/marievelasco.pdf">CV_MARIE_VELASCO</a>
               </p>
 
               <img id="click" src="CSS/img/GIF/click.gif" class="flexbox" />
@@ -128,7 +126,7 @@
 
                 <br /><br />
                 Vous avez un projet ? Demander un devis
-                <a href="mailto:mev.dsign@gmail.com"><u>ici</u></a
+                <a href="mailto:hello@marievelasco.com"><u>ici</u></a
                 >.
               </p>
             </div>
