--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>CONTACT</title>
+    <title>contact</title>
     <link href="CSS/CSS.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap"
@@ -87,38 +87,32 @@
         <section>
           <div class="flexbox centered full-size column">
             <div id="positionnement">
-              <a href="mailto:mev.dsign@gmail.com">
-                <img src="CSS/img/CARTE.gif" />
+              <a href="mailto:hello@marievelasco.com">
+                <img src="CSS/img/carte.png" width="40%" />
               </a>
+
               <img
-                id="etoile"
-                src="CSS/img/GIF/etoile.gif"
+                id="mev"
+                src="CSS/img/GIF/mev.gif"
                 class="flexbox"
-                width="15%"
+                width="6%"
               />
               <img
                 id="at"
                 src="CSS/img/GIF/at.gif"
                 class="flexbox"
-                width="15%"
+                width="6%"
               />
-              <img
-                id="contact"
-                src="CSS/img/GIF/contact.gif"
-                class="flexbox"
-                width="40%"
-              />
+
               <img
                 id="diese"
                 src="CSS/img/GIF/dieze.gif"
                 class="flexbox"
-                width="15%"
+                width="7%"
               />
             </div>
 
-            <a id="telecharger" href="../../02_CARTE/PRINT/CARTE_VISITE.pdf"
-              >TÉLÉCHARGER</a
-            >
+            <a id="telecharger" href="CSS/img/cartes.pdf">TÉLÉCHARGER</a>
           </div>
         </section>
       </div>
