--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               />
 
               <hr id="trait" width="100%" color="white" size="3" />
-              <div id="codebarre"><img src="CSS/img/LOGO.gif" /></div>
+              <div id="codebarre"><img id="logo" src="CSS/img/logo.png" /></div>
             </div>
           </div>
         </section>
