--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>MENTIONS LÉGALES</title>
+    <title>mentions légales</title>
     <link href="CSS/CSS.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap"
@@ -15,7 +15,15 @@
   </head>
 
   <body>
+
     <section>
+
+      <img
+                id="etoilee"
+                src="CSS/img/GIF/etoile.gif"
+                class="flexbox"
+                width="4%"
+              />
       <article>
         <p id="mentions">
           <b>MENTIONS LÉGALES </b>
@@ -25,7 +33,7 @@
           <br /><br/>
           En vertu de l’article 6 de la loi n° 2004-575 du 21 juin 2004 pour la
           confiance dans l’économie numérique, il est précisé aux utilisateurs
-          du site www.X l’identité des différents intervenants dans le cadre de
+          du site www.marievelasco.com l’identité des différents intervenants dans le cadre de
           sa réalisation et de son suivi :
 
           <br /><br/>PROPRIÉTAIRE : Marie Velasco // MEV
@@ -162,20 +170,10 @@
           possibilité de vérifier le contenu des sites ainsi visités, et
           n’assumera en conséquence aucune responsabilité de ce fait.
 
-          <br />La navigation sur le site www.marievelasco.com est susceptible de provoquer
-          l’installation de cookie(s) sur l’ordinateur de l’utilisateur. Un
-          cookie est un fichier de petite taille, qui ne permet pas
-          l’identification de l’utilisateur, mais qui enregistre des
-          informations relatives à la navigation d’un ordinateur sur un site.
-          Les données ainsi obtenues visent à faciliter la navigation ultérieure
-          sur le site, et ont également vocation à permettre diverses mesures de
-          fréquentation. Le refus d’installation d’un cookie peut entraîner
-          l’impossibilité d’accéder à certains services.
-
           <br /><br /><br />
           9 // DROIT APPLICABLE ET ATTRIBUTION DE JURIDICTION
 
-          <br /><br />Tout litige en relation avec l’utilisation du site www.X
+          <br /><br />Tout litige en relation avec l’utilisation du site www.marievelasco.com
           est soumis au droit français. Il est fait attribution exclusive de
           juridiction aux tribunaux compétents de Paris.
 
