--- a/work.html
+++ b/work.html
@@ -84,7 +84,12 @@
     <div id="main" onclick="closeMenu()">
       <div class="page-container">
         <section>
-          <img src="CSS/img/GIF/fleche.gif" class="rotation90" width="40px" />
+          <img
+            src="CSS/img/GIF/fleche.gif"
+            class="rotation90"
+            width="40px"
+            style="align-items: flex-start;"
+          />
         </section>
         <section style="padding-top: 0;">
           <div class="bloc">
