--- a/work.html
+++ b/work.html
@@ -83,13 +83,8 @@
     </div>
     <div id="main" onclick="closeMenu()">
       <div class="page-container">
-        <section>
-          <img
-            src="CSS/img/GIF/fleche.gif"
-            class="rotation90"
-            width="40px"
-            style="align-items: flex-start;"
-          />
+        <section style="align-items: flex-start;">
+          <img src="CSS/img/GIF/fleche.gif" class="rotation90" width="40px" />
         </section>
         <section style="padding-top: 0;">
           <div class="bloc">
