--- a/about.html
+++ b/about.html
@@ -99,14 +99,15 @@
           <article>
             <div id="paragraphe">
               <p>
-                Je suis Marie Velasco, graphiste freelance basée à Montpellier.
+                Je suis Marie Velasco, graphiste freelance dans le sud de la
+                France.
                 <br /><br />
                 Passionnée par l'art, la typographie et la photographie j'aime
                 me plonger dans des univers singuliers.
                 <br /><br />
-                Je puise mon inspiration dans tout ce qui m'entoure. J'aime
-                expérimenter, créer, apprendre de nouvelles techniques pour être
-                le plus polyvalente dans mes créations.
+                Je puise mon inspiration dans tout ce qui m’entoure. J’aime
+                expérimenter, créer et apprendre de nouvelles techniques pour
+                acquérir plus de polyvalence dans mes futures réalisations.
                 <br /><br />
                 <a href="CSS/img/marievelasco.pdf">CV_MARIE_VELASCO</a>
               </p>
@@ -120,8 +121,8 @@
               <p>
                 Mes services s'étendent de la conception graphique (identités
                 visuelles, logotypes, identité de marque...) aux supports
-                imprimés (les cartes de visite, brochures, affiches, flyers...)
-                et aux supports digitaux (webdesign, community management,
+                imprimés (cartes de visite, brochures, affiches, flyers...) et
+                aux supports digitaux (webdesign, community management,
                 bannières...) en passant par la photographie et l'illustration.
 
                 <br /><br />
