--- a/about.html
+++ b/about.html
@@ -9,10 +9,14 @@
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <meta name="description" content="Marie Velasco, à propos de moi." />
   </head>
 
   <body>
@@ -89,8 +93,12 @@
             <div id="positionnement">
               <div class="contouring" id="about-box">
                 <div id="codebarre">
-                  <img id="marie" src="CSS/img/GIF/marie.gif" />
-                  <img id="logoo" src="CSS/img/logo.png" />
+                  <img
+                    id="marie"
+                    src="CSS/img/GIF/marie.gif"
+                    alt="gif marie velasco"
+                  />
+                  <img id="logoo" src="CSS/img/logo.png" alt="logo mev" />
                 </div>
               </div>
             </div>
@@ -109,7 +117,8 @@
                 expérimenter, créer et apprendre de nouvelles techniques pour
                 acquérir plus de polyvalence dans mes futures réalisations.
                 <br /><br />
-                <a href="CSS/img/marievelasco.pdf">CV_MARIE_VELASCO</a>
+
+                <a href="CSS/img/marievelasco.pdf">Télécharger mon CV.</a>
               </p>
 
               <img id="click" src="CSS/img/GIF/click.gif" class="flexbox" />
@@ -123,7 +132,9 @@
                 visuelles, logotypes, identité de marque...) aux supports
                 imprimés (cartes de visite, brochures, affiches, flyers...) et
                 aux supports digitaux (webdesign, community management,
-                bannières...) en passant par la photographie et l'illustration.
+                bannières...).
+                <br />
+                Je propose également de la photographie et de l'illustration.
 
                 <br /><br />
                 Vous avez un projet ? Demander un devis
