--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <link rel="icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
+    <meta
+      name="description"
+      content="Besoins d'un graphiste ? N'hésitez pas à me contacter."
+    />
   </head>
 
   <body>
@@ -88,7 +94,11 @@
           <div class="flexbox centered full-size column">
             <div id="positionnement">
               <a href="mailto:hello@marievelasco.com">
-                <img src="CSS/img/carte.png" width="40%" />
+                <img
+                  src="CSS/img/carte.png"
+                  width="45%"
+                  alt="contact marie velasco, designer graphique, adresse mail : hello@marievelasco.com, téléphone : 0610497850"
+                />
               </a>
 
               <img
@@ -96,12 +106,14 @@
                 src="CSS/img/GIF/mev.gif"
                 class="flexbox"
                 width="6%"
+                alt="gif mev"
               />
               <img
                 id="at"
                 src="CSS/img/GIF/at.gif"
                 class="flexbox"
                 width="6%"
+                alt="gif at"
               />
 
               <img
@@ -109,6 +121,7 @@
                 src="CSS/img/GIF/dieze.gif"
                 class="flexbox"
                 width="7%"
+                alt="gif diese"
               />
             </div>
 
