--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>MARIE VELASCO // MEV</title>
-
+    <title>MARIE VELASCO / MEV</title>
+    <link rel="icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
     <link href="CSS/CSS.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap"
@@ -13,6 +14,10 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
+    <meta
+      name="description"
+      content="Marie Velasco, designer graphiste freelance."
     />
   </head>
 
@@ -71,13 +76,16 @@
           <a href="contact.html">contact</a>
           <br />
           <a href="https://www.instagram.com/studio_mev/?hl=fr" target="_blank">
-            <img src="CSS/img/GIF/instagram.png" alt="" width="10%"
+            <img
+              src="CSS/img/GIF/instagram.png"
+              alt="lien instagram"
+              width="10%"
           /></a>
 
           <a
             href="https://www.linkedin.com/in/marie-velasco-25a074167/"
             target="_blank"
-            ><img src="CSS/img/GIF/linkedin.png" alt="" width="10%"
+            ><img src="CSS/img/GIF/linkedin.png" alt="lien linkedin" width="10%"
           /></a>
         </div>
       </div>
@@ -102,10 +110,17 @@
                 src="CSS/img/GIF/hello.gif"
                 class="flexbox"
                 width="100px"
+                alt="gif hello"
               />
 
               <hr id="trait" width="100%" color="white" size="3" />
-              <div id="codebarre"><img id="logo" src="CSS/img/logo.png" /></div>
+              <div id="codebarre">
+                <img
+                  id="logo"
+                  src="CSS/img/logo.png"
+                  alt="logo marie velasco / mev"
+                />
+              </div>
             </div>
           </div>
         </section>
