--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>mentions légales</title>
+
+    <link rel="icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
+    
     <link href="CSS/CSS.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap"
@@ -12,6 +16,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <meta
+    name="description"
+    content="Mentions légales du site marievelasco.com"
+  />
   </head>
 
   <body>
