--- a/work.html
+++ b/work.html
@@ -13,6 +13,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <link rel="icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
+    <meta
+      name="description"
+      content="Découvrir mes réalisations et mon univers graphique"
+    />
   </head>
 
   <body>
@@ -88,14 +94,17 @@
         </section>
         <section style="padding-top: 0;">
           <div class="bloc">
-            <h2>MEV_IDENTITY</h2>
+            <h2>MEV_IDENTITÉ</h2>
             <hr class="traitb" width="100%" color="white" size="3" />
             <a
               class="cover"
               href="https://www.behance.net/gallery/92025101/MEV_DESIGN"
               target="_blank"
             >
-              <img src="CSS/img/couv/mev.jpg" />
+              <img
+                src="CSS/img/couv/mev.jpg"
+                alt="identité visuelle de marie velasco / mev, Designer Graphique "
+              />
             </a>
           </div>
 
@@ -107,19 +116,25 @@
               href="https://www.behance.net/gallery/90781813/FLINT_WEBDESIGN"
               target="_blank"
             >
-              <img src="CSS/img/couv/flint.png" />
+              <img
+                src="CSS/img/couv/flint.png"
+                alt="Webdesign de flint : création d'un nouveau logo, illustrations et redesign de site"
+              />
             </a>
           </div>
 
           <div class="bloc">
-            <h2>JPO_CARD</h2>
+            <h2>JPO_ESMA_COMMUNICATION</h2>
             <hr class="traitb" width="100%" color="white" size="3" />
             <a
               class="cover"
               href="https://www.behance.net/gallery/92531625/JPO_ESMA_19"
               target="_blank"
             >
-              <img src="CSS/img/couv/jpo.png" />
+              <img
+                src="CSS/img/couv/jpo.png"
+                alt="Journées Portes Ouvertes de l'école ESMA Montpellier, carte de communication pour promouvoir l'évènement"
+              />
             </a>
           </div>
 
@@ -131,7 +146,11 @@
               href="https://www.behance.net/gallery/92813151/RANGE_TA_CHAMBRE"
               target="_blank"
             >
-              <img src="CSS/img/couv/rtc.png" />
+              <img
+                src="CSS/img/couv/rtc.png"
+                alt="Création d'affiche et de bannière Facebook pour
+              l'évènement Range Ta Chambre à Montpellier sur l'univers de l'enfant"
+              />
             </a>
           </div>
 
@@ -143,19 +162,25 @@
               href="https://www.behance.net/gallery/90799411/MARINE_P"
               target="_blank"
             >
-              <img src="CSS/img/couv/mp.png" />
+              <img
+                src="CSS/img/couv/mp.png"
+                alt="Élaboration d'une brochure pour présenter Marine Ponsonnaille, diététicienne nutritionniste"
+              />
             </a>
           </div>
 
           <div class="bloc">
-            <h2>ADR_PRESENTATION</h2>
+            <h2>ADR_PRÉSENTATION</h2>
             <hr class="traitb" width="100%" color="white" size="3" />
             <a
               class="cover"
               href="https://www.behance.net/gallery/91718921/ADR_PRESENTATION"
               target="_blank"
             >
-              <img src="CSS/img/couv/adr diaporama.png" />
+              <img
+                src="CSS/img/couv/adr diaporama.png"
+                alt="Création d'un support digital (diaporama) pour présenter les valeurs de l'agence ADR et ses réalisations"
+              />
             </a>
           </div>
 
@@ -167,19 +192,25 @@
               href="https://www.behance.net/gallery/90740937/ADR_DIRECTORY"
               target="_blank"
             >
-              <img src="CSS/img/couv/adr directory.jpg" />
+              <img
+                src="CSS/img/couv/adr directory.jpg"
+                alt="Réalisation d'un directory (livre) présentant l'agence ADR et son fonctionnement"
+              />
             </a>
           </div>
 
           <div class="bloc">
-            <h2>WEDDING_CARD</h2>
+            <h2>INVITATION_MARIAGE</h2>
             <hr class="traitb" width="100%" color="white" size="3" />
             <a
               class="cover"
               href="https://www.behance.net/gallery/91787255/WEDDING_CARD"
               target="_blank"
             >
-              <img src="CSS/img/couv/wedding card.jpg" />
+              <img
+                src="CSS/img/couv/wedding card.jpg"
+                alt="Création des cartes d'invitation de mariage"
+              />
             </a>
           </div>
 
@@ -191,43 +222,57 @@
               href="https://www.behance.net/gallery/91035845/SHOW_PACKAGING"
               target="_blank"
             >
-              <img src="CSS/img/couv/show.png" />
+              <img
+                src="CSS/img/couv/show.png"
+                alt="Élaboration d'un packaging tabelette de chocolat pour la marque Show"
+              />
             </a>
           </div>
 
           <div class="bloc">
-            <h2>ZAS_MUSIC</h2>
+            <h2>ZAS_CD</h2>
             <hr class="traitb" width="100%" color="white" size="3" />
             <a
               class="cover"
               href="https://www.behance.net/gallery/90276931/ZAS_MUSIC"
               target="_blank"
             >
-              <img src="CSS/img/couv/zas.png" />
+              <img
+                src="CSS/img/couv/zas.png"
+                alt="Réalisation d'une pochette CD pour l'artiste ZAS, rappeur"
+              />
             </a>
           </div>
 
           <div class="bloc">
-            <h2>ZENITH_SUD</h2>
+            <h2>ZÉNITH_SUD</h2>
             <hr class="traitb" width="100%" color="white" size="3" />
             <a
               class="cover"
               href="https://www.behance.net/gallery/90797917/ZENITH_SUD"
               target="_blank"
             >
-              <img src="CSS/img/couv/zenith.png" />
+              <img
+                src="CSS/img/couv/zenith.png"
+                alt="Création de carte de communication pour le Zénith Sud Montpellier pour l'année 2018"
+              />
             </a>
           </div>
 
           <div class="bloc">
-            <h2>LES_CULOTTEES</h2>
+            <h2>LES_CULOTTÉES</h2>
             <hr class="traitb" width="100%" color="white" size="3" />
             <a
               class="cover"
               href="https://www.behance.net/gallery/90831985/LES_CULOTTEES"
               target="_blank"
             >
-              <img src="CSS/img/couv/lesculottees.jpg" />
+              <img
+                src="CSS/img/couv/lesculottees.jpg"
+                alt="Création d'identité
+              visuelle (site et cartes de visite) pour l'association les
+              Culottées défendant le féminisme inclusif"
+              />
             </a>
           </div>
 
@@ -239,19 +284,25 @@
               href="https://www.behance.net/gallery/90778647/LES_ESTIVALES"
               target="_blank"
             >
-              <img src="CSS/img/couv/les estivales.jpg" />
+              <img
+                src="CSS/img/couv/les estivales.jpg"
+                alt="Élaboration d'une affiche pour les estivales de Montpellier"
+              />
             </a>
           </div>
 
           <div class="bloc">
-            <h2>PHOTOGRAPHY</h2>
+            <h2>PHOTOGRAPHIES</h2>
             <hr class="traitb" width="100%" color="white" size="3" />
             <a
               class="cover"
               href="https://www.behance.net/gallery/90882985/PHOTOGRAPHY"
               target="_blank"
             >
-              <img src="CSS/img/couv/photography.jpg" />
+              <img
+                src="CSS/img/couv/photography.jpg"
+                alt="Photographie personnelle alliant atmosphere, matiere et brutalité"
+              />
             </a>
           </div>
         </section>
