--- a/contact.html
+++ b/contact.html
@@ -94,14 +94,13 @@
           <div class="flexbox centered full-size column">
             <div id="positionnement">
               <a href="mailto:hello@marievelasco.com">
-                <img
+                <img id="carte"
                   src="CSS/img/carte.png"
-                  width="45%"
                   alt="contact marie velasco, designer graphique, adresse mail : hello@marievelasco.com, téléphone : 0610497850"
                 />
               </a>
 
-              <img
+              <!-- <img
                 id="mev"
                 src="CSS/img/GIF/mev.gif"
                 class="flexbox"
@@ -122,13 +121,24 @@
                 class="flexbox"
                 width="7%"
                 alt="gif diese"
-              />
+              /> -->
             </div>
 
             <a id="telecharger" href="CSS/img/cartes.pdf">TÉLÉCHARGER</a>
+            <br />
+                ___
           </div>
+      <div id="bande">
+          <marquee scrollamount="7">
+            | MEV | MARIE VELASCO : DESIGNER GRAPHISTE | 06.10.49.78.50 | hello@marievelasco.com | MEV | 
+            SUPPORTS IMPRIMÉS / SUPPORTS NUMÉRIQUES / ILLUSTRATIONS / PHOTOGRAPHIES | www.marievelasco.com Ⓒ | MEV |</marquee
+          ></bande>
+        </div>
         </section>
+
+        
       </div>
+        
     </div>
 
     <script type="text/javascript" src="menu.js"></script>
