--- a/about.html
+++ b/about.html
@@ -92,14 +92,16 @@
           <article>
             <div id="positionnement">
               <div class="contouring" id="about-box">
-                <div id="codebarre">
-                  <img
-                    id="marie"
-                    src="CSS/img/GIF/marie.gif"
-                    alt="gif marie velasco"
-                  />
-                  <img id="logoo" src="CSS/img/logo.png" alt="logo mev" />
-                </div>
+                <a
+                  href="https://www.linkedin.com/in/marie-velasco-25a074167/"
+                  target="_blank"
+                >
+                  <img id="marie" src="CSS/img/mev.png" alt="marie velasco"
+                /></a>
+
+                <!-- <div id="codebarre"> 
+                  <img id="logoo" src="CSS/img/logo.png" alt="logo mev" /> 
+                 </div> -->
               </div>
             </div>
           </article>
@@ -107,43 +109,85 @@
           <article>
             <div id="paragraphe">
               <p>
-                Je suis Marie Velasco, graphiste freelance dans le sud de la
-                France.
-                <br /><br />
+                PRÉSENTATION
+                <br />
+                ___
+                <br />
+                <br />
+                Je suis Marie Velasco "MEV", graphiste freelance dans le sud de
+                la France.
+                <br />
                 Passionnée par l'art, la typographie et la photographie j'aime
                 me plonger dans des univers singuliers.
-                <br /><br />
+                <br />
                 Je puise mon inspiration dans tout ce qui m’entoure. J’aime
                 expérimenter, créer et apprendre de nouvelles techniques pour
                 acquérir plus de polyvalence dans mes futures réalisations.
                 <br /><br />
 
                 <a href="CSS/img/marievelasco.pdf">Télécharger mon CV.</a>
+                <br />
+                ___
               </p>
 
-              <img id="click" src="CSS/img/GIF/click.gif" class="flexbox" />
+              <!-- <img id="click" src="CSS/img/GIF/click.gif" class="flexbox" /> -->
             </div>
           </article>
 
           <article>
             <div id="paragraphe">
               <p>
-                Mes services s'étendent de la conception graphique (identités
-                visuelles, logotypes, identité de marque...) aux supports
-                imprimés (cartes de visite, brochures, affiches, flyers...) et
-                aux supports digitaux (webdesign, community management,
-                bannières...).
+                SERVICES
+                <br />
+                ___
+                <br />
+                <br />
+                Mes services s'étendent de la conception graphique (identité
+                visuelle, logotype, charte graphique) aux supports imprimés
+                (cartes de visite, brochures, affiches, flyers, goodies, etc.)
+                et aux supports digitaux (webdesign, gifs, vidéos, community
+                management, bannières, etc.).
                 <br />
                 Je propose également de la photographie et de l'illustration.
+                N'hésitez pas à consulter mon portfolio dans l'espace
+                <a href="work.html">work</a>.
 
                 <br /><br />
-                Vous avez un projet ? Demander un devis
+                Vous avez un projet ? Des questions sur les tarifs ? Demander
                 <a href="mailto:hello@marievelasco.com"><u>ici</u></a
                 >.
+                <br />
+                ___
               </p>
             </div>
           </article>
         </section>
+        <h4>
+          INSTAGRAM |
+          <a href="https://www.instagram.com/studio_mev/?hl=fr" target="_blank"
+            >studio_mev</a
+          >
+        </h4>
+
+        <div class="flexbox centered">
+          <div id="insta">
+            <script
+              src="https://apps.elfsight.com/p/platform.js"
+              defer
+            ></script>
+            <div
+              class="elfsight-app-5a0c5832-51dc-40e9-82a9-6e229e223ffc"
+            ></div>
+          </div>
+        </div>
+        <footer id="footer">
+          <h3>
+            MEV © 2020 |
+            <a href="mentions_legales.html" target="_blank"
+              >MENTIONS LÉGALES
+            </a>
+          </h3>
+        </footer>
       </div>
     </div>
 
