--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
         </section> -->
 
         <div class="flexbox centered full-size">
+          <img id="gifvideo" src="CSS/img/mevvideo.gif" alt="gif video" />
+
           <video
             id="video"
             muted
