--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>MARIE VELASCO / MEV</title>
+    <title>MARIE VELASCO | Mev</title>
     <link rel="icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
     <link rel="shortcut icon" type="image/x-icon" href="CSS/img/mevicon.ico" />
     <link href="CSS/CSS.css" rel="stylesheet" type="text/css" />
@@ -108,13 +108,7 @@
                 />
               </div>
 
-              <img
-          id="hello"
-          src="CSS/img/GIF/hello.gif"
-          class="flexbox"
-          width="100px"
-          alt="gif hello"
-        />
+              
 
               <hr id="trait" width="100%" color="white" size="3" />
               <div id="codebarre">
@@ -127,6 +121,14 @@
             </div>
           </div>
         </section> -->
+
+        <img
+          id="hello"
+          src="CSS/img/GIF/hello.gif"
+          class="flexbox"
+          width="100px"
+          alt="gif hello"
+        />
 
         <div class="flexbox centered full-size">
           <img id="gifvideo" src="CSS/img/mevvideo.gif" alt="gif video" />
