update img path

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<img src="images/meve.gif" width ="27%" alt="logomeve"/>
+									<img src="images/meve.GIF" width ="27%" alt="logomeve"/>
 									<br>
 									☼
 									<br><strong>Marie Velasco</strong>
