--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
@@ -15,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✴ </a>
+					<a href="index.html" class="logo">MARIE VELASCO ☼</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -35,9 +37,9 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<img src="images/meve.GIF" width ="27%" alt="logomeve"/>
+									<img src="images/meve.gif" width ="27%" alt="logomeve"/>
 									<br>
-									☼
+									↓
 									<br><strong>Marie Velasco</strong>
 									<br>
 									Designer graphiste
