--- a/estampe.html
+++ b/estampe.html
@@ -7,6 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
@@ -15,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ✴ </a>
+					<a href="index.html" class="logo">MARIE VELASCO ☼</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -76,7 +78,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; MEVE</li><li>2021</li>
+					<li>&copy; by MEVE</li>
 				</ul>
 				<br>
 			</div>
