--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">MARIE VELASCO ✴ </a>
+						<a href="index.html" class="logo">MARIE VELASCO ☼</a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -119,7 +119,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="copyright">
-								<li>&copy; MEVE</li><li>2021</li>
+								<li>&copy; by MEVE</li>
 							</ul>
 						</div>
 					</footer>
