--- a/olena.html
+++ b/olena.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">MARIE VELASCO ☼</a>
+					<a href="index.html" class="logo">MARIE VELASCO ☀</a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -40,7 +40,6 @@
 								<div class="inner">
 									
 									<strong><h2>Olena Yatsenko</h2></strong>
-									
 									<p><i>Logo et identité visuelle</i></p>
 									↓
 								    <br><br>
